--- a/magda-web-client/src/Components/Header/Header.scss
+++ b/magda-web-client/src/Components/Header/Header.scss
@@ -142,6 +142,7 @@
         position: absolute;
         width: 100%;
         z-index: 1;
+        box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.1);
         ul {
             padding: 0px;
         }
@@ -151,6 +152,7 @@
         background: #fff;
         overflow-y: hidden;
         height: 0;
+
         li {
             padding: 0;
             margin: 0;
