--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -14,6 +14,7 @@
         <h1 class="project-name">
             <img src="/magda-inverse.svg" alt="{{ site.title | default: site.github.repository_name }}" style="max-height: 100px">
         </h1>
+        <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
         <a href="https://github.com/magda-io/magda" class="btn">View on GitHub</a>
         {% if site.show_downloads %}
         <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
