Updated header logo to be correct branding type (#1409)
* Updated header logo to be correct branding type

* Update HomePage.js

* DS Header component (#1456)

* Resolves #1337 on magda-io/magda. Uses the Design System Header component, changes the main menu.

* Updated CHANGES

* Fix header bug created previous commit, where menu disappeared on desktops

* Move the menu links back to the top

* adjust mobile menu

* shrink smallest mobile header logo more

* fix menu on mobile

* fix menu alignment

--- a/magda-web-client/src/index.scss
+++ b/magda-web-client/src/index.scss
@@ -205,6 +205,14 @@ h4 {
     background: #ffffff;
 }
 
+.au-skip-link__link {
+    color: $AU-color-background !important;
+}
+
+.ReactModal__Body--open div.au-grid {
+    filter: blur(1.5px);
+}
+
 .au-page-alerts {
     h3 {
         margin: 0;
