--- a/magda-web-client/src/Components/SearchFacets/FacetHeader.scss
+++ b/magda-web-client/src/Components/SearchFacets/FacetHeader.scss
@@ -18,11 +18,10 @@
         display: flex;
     }
 
-    @media (max-width: $medium) {
-        .btn-facet {
-            width: 100%;
-        }
+    .btn-facet.format {
+        text-transform: uppercase;
     }
+
     button {
         border: 1px solid rgba(73, 73, 73, 0.05);
         border-radius: 2px;
