Simplify header structure and fix some responsive glitches

--- a/magda-web-client/src/Components/Header/Header.scss
+++ b/magda-web-client/src/Components/Header/Header.scss
@@ -3,36 +3,33 @@
 .au-header {
     padding: 16px 0 8px 0;
     padding: 1rem 0 0.5rem 0;
+
     @media screen and (min-width: $medium) {
         opacity: 0.9;
     }
+
     .au-header__brand {
-        .au-header__text {
-            border-left: 1px solid;
-        }
-        .au-header__brand-image,
-        .au-header__text {
+        display: block;
+        height: 78px;
+        min-width: 290px;
+        overflow: hidden;
+        padding: 0;
+        margin: 0;
+
+        .au-header__brand-image2,
+        .au-header__logo {
             display: inline-block;
-            margin: 0;
+            margin-right: 8px;
+            line-height: 78px;
+            vertical-align: middle;
         }
 
-        @media screen and (max-width: $medium) {
-            text-align: center;
-            width: 100%;
-            .au-header__text {
-                margin-left: 4px;
-                margin-left: 0.25rem;
-                padding-left: 4px;
-                padding-left: 0.25rem;
-            }
-        }
-        @media screen and (min-width: $small) {
-            .au-header__text {
-                margin-left: 8px;
-                margin-left: 0.5rem;
-                padding-left: 8px;
-                padding-left: 0.5rem;
-            }
+        .au-header__logo {
+            max-width: 120px;
+            max-height: 70px;
+            border-left: 1px solid black;
+            margin-right: 0px;
+            padding-left: 8px;
         }
     }
 }
@@ -121,7 +118,7 @@
 
         @media screen and (min-width: $medium) {
             padding: 16px 16px;
-            padding: 1rem 1rem;
+            padding: 1rem 0.78rem;
         }
     }
     .au-link-list {
