--- a/magda-web-client/src/index.scss
+++ b/magda-web-client/src/index.scss
@@ -173,8 +173,9 @@ a {
 // gold starts here
 
 h1 {
-    font-size: 32px;
-    font-weight: 400;
+    font-size: 28px;
+    font-weight: 300;
+    margin-bottom: 16px;
 }
 
 h2 {
