--- a/magda-web-client/src/index.scss
+++ b/magda-web-client/src/index.scss
@@ -179,7 +179,8 @@ h1 {
 }
 
 h2 {
-    @include AU-fontgrid(lg, heading);
+    font-size: 1.5rem;
+    line-height: 1.33333;
     font-weight: 400;
 }
 
