--- a/magda-web-client/src/Pages/HomePageComponents/Stories.scss
+++ b/magda-web-client/src/Pages/HomePageComponents/Stories.scss
@@ -28,7 +28,7 @@
     .col-2 {
         width: calc(100% / 2 - 8px);
         & > div {
-            height: calc(100% - 13px);
+            height: calc(100%);
         }
     }
 
