--- a/magda-web-client/src/Pages/HomePageComponents/StoryBox.scss
+++ b/magda-web-client/src/Pages/HomePageComponents/StoryBox.scss
@@ -1,48 +1,54 @@
 @import "../../variables";
 
 .homepage-stories {
+    .story-box {
+        background: #ffffff;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        border-radius: 4px;
+    }
+
     .story-title-link:hover {
         color: $AU-color-foreground-action;
         background-color: $AU-color-background;
     }
+
     .story-title-link {
         border: none;
     }
-    .story-box {
-        background: #ffffff;
-        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-        padding: 13px;
-        border-radius: 4px;
-        .story-title {
-            @include AU-fontgrid(lg, heading);
-        }
 
-        .story-title-image {
-            width: 100%;
-            height: auto;
-        }
+    .story-title {
+        @include AU-fontgrid(lg, heading);
+        margin-top: 0;
+    }
 
-        .story-box-body {
-            a {
-                text-decoration: none;
-            }
-            .markdown {
-                font-family: inherit;
-                font-style: normal;
-                font-weight: normal;
-            }
+    .story-title-image {
+        width: 100%;
+        height: auto;
+    }
+
+    .story-box-body {
+        padding: 16px;
+
+        a {
+            text-decoration: none;
+        }
+        .markdown {
+            font-family: inherit;
+            font-style: normal;
+            font-weight: normal;
         }
     }
 
     @media (max-width: $medium) {
+        .story-box-text {
+            padding: 16px;
+        }
+
+        .story-box-body {
+            padding: 0;
+        }
+
         .story-box {
-            .markdown {
-                padding: 16px;
-            }
-            h1 {
-                padding-left: 16px;
-                padding-right: 16px;
-            }
             margin-bottom: 16px;
             padding: 0px;
         }
