Update the email template: make email address clickable

--- a/magda-correspondence-api/templates/question.pug
+++ b/magda-correspondence-api/templates/question.pug
@@ -10,7 +10,7 @@ body
     |<a href="#{datasetUrl}">#{dataset.url}</a>.
     |Please respond to this query as soon as possible.<br/><br/>
 
-    |The query is from  #{message.senderName}, #{message.senderEmail}: <br/><br/>
+    |The query is from  #{message.senderName}, <a href="mailto:#{message.senderEmail}">#{message.senderEmail}</a>: <br/><br/>
 
     |!{message.html} <br/><br/>
 
