--- a/magda-correspondence-api/templates/feedback.pug
+++ b/magda-correspondence-api/templates/feedback.pug
@@ -9,7 +9,7 @@ body
     |published by #{dataset.publisher}, at 
     |<a href="#{datasetUrl}">#{dataset.url}</a>.
 
-    |The feedback is from  #{message.senderName}, #{message.senderEmail}: <br/><br/>
+    |The feedback is from  #{message.senderName}, <a href="mailto:#{message.senderEmail}">#{message.senderEmail}</a>: <br/><br/>
 
     |!{message.html} <br/><br/>
 
