Removed text transform by specifying a text-transform override for format filter

--- a/magda-web-client/src/Components/SearchFacets/NoResultsLabel.scss
+++ b/magda-web-client/src/Components/SearchFacets/NoResultsLabel.scss
@@ -1,4 +1,7 @@
 .btn-facet-option-disabled {
     display: block;
     border: 0;
+    .btn-facet-option__name {
+        text-transform: none !important;
+    }
 }
