--- a/magda-web-client/src/UI/DescriptionBox.scss
+++ b/magda-web-client/src/UI/DescriptionBox.scss
@@ -1,23 +1,10 @@
 @import "../variables";
-.description-box {
-    span {
-        font-size: 1rem;
-    }
-    .toggle-button {
-        color: $AU-color-foreground-action;
-        background: transparent;
-        border: none;
-        cursor: pointer;
-        position: relative;
-        padding-left: 0px;
-        margin-top: 24px;
 
-        img {
-            position: absolute;
-            top: -2px;
-        }
-    }
-    .toggle-button:focus {
-        outline: none;
-    }
+.description-box-toggle-button {
+    margin-top: 24px;
+}
+
+.description-box-toggle-button-icon {
+    position: absolute;
+    top: -2px;
 }
