Fixed up missing colon.

--- a/magda-web-client/src/UI/ToggleButton.scss
+++ b/magda-web-client/src/UI/ToggleButton.scss
@@ -9,9 +9,8 @@
     position: relative;
     padding-left: 0px;
 
-    &:hover {
-        focus {
-            outline: none;
-        }
+    &:hover,
+    &:focus {
+        outline: none;
     }
 }
