Updating external links in About page to open them in new window

--- a/magda-web-client/src/Pages/OtherPages.scss
+++ b/magda-web-client/src/Pages/OtherPages.scss
@@ -4,3 +4,11 @@
         min-height: calc(100vh - 112px);
     }
 }
+
+.visuallyhidden {
+    display: inline-block;
+    width: 0;
+    height: 0;
+    overflow: hidden;
+    white-space: nowrap;
+}
