Make header menu items come from content api (Fixes #1762)

--- a/magda-gateway/views/_head.ejs
+++ b/magda-gateway/views/_head.ejs
@@ -9,6 +9,9 @@
 <%- include( '_head_d3.js' ) %>
 </script>
 <script>
+<%- include( '_head_jsoneditor.js' ) %>
+</script>
+<script>
 <%- include( '_head_babel.js' ) %>
 </script>
 <style>
