Display stories from content api

--- a/magda-web-client/src/Pages/HomePage.scss
+++ b/magda-web-client/src/Pages/HomePage.scss
@@ -2,7 +2,7 @@
 .homepage-app-container {
     .app-container {
         position: relative;
-        min-height: 100vh;
+        // min-height: 100vh;
     }
 
     .homepage-background-img {
