--- a/magda-web-client/src/_variables.scss
+++ b/magda-web-client/src/_variables.scss
@@ -8,7 +8,7 @@ $AU-colordark-foreground-focus: #6b7fd7;
 $AU-colordark-foreground-text: #f7f7f7;
 $AU-colordark-background: #320e3b;
 
-$header-color-background: transparent;
+$header-color-background: #ffffff;
 $header-opacity-desktop-background: 0.9;
 $header-color-border: #341039;
 
