--- a/magda-web-client/src/_variables.scss
+++ b/magda-web-client/src/_variables.scss
@@ -18,6 +18,7 @@ $header-color-action-background: transparent;
 $header-color-focus: #fff;
 $header-color-focus-background: #341039;
 
+$header-color-mobile-toggle-button-text: #6b7fd7;
 $header-color-mobile-nav-background: white;
 $header-color-mobile-nav-border-bottom: #dad9db;
 $header-color-mobile-nav-border-left: transparent;
@@ -26,8 +27,8 @@ $header-color-mobile-nav-action-background: transparent;
 $header-color-mobile-nav-active: inherit;
 $header-color-mobile-nav-active-background: #f4f3f5;
 $header-color-mobile-nav-active-border: $AU-colordark-background;
-$header-color-mobile-nav-focus: inherit;
-$header-color-mobile-nav-focus-background: transparent;
+$header-color-mobile-nav-focus: #ffffff;
+$header-color-mobile-nav-focus-background: #341039;
 $header-color-mobile-nav-focus-border: transparent;
 $header-color-mobile-nav-content: inherit;
 $header-color-mobile-nav-content-background: transparent;
