make toggle button icon configurable (via scss var)

--- a/magda-web-client/src/_variables.scss
+++ b/magda-web-client/src/_variables.scss
@@ -19,6 +19,7 @@ $header-color-focus: #fff;
 $header-color-focus-background: #341039;
 
 $header-color-mobile-toggle-button-text: #6b7fd7;
+$header-color-mobile-toggle-button-icon: #000000;
 $header-color-mobile-nav-background: white;
 $header-color-mobile-nav-border-bottom: #dad9db;
 $header-color-mobile-nav-border-left: transparent;
