--- a/magda-web-client/src/Components/Header/Header.scss
+++ b/magda-web-client/src/Components/Header/Header.scss
@@ -45,7 +45,7 @@
 
     &:before {
         background-image: AU-svguri(
-            '<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill="#000000">' +
+            '<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill="#{$header-color-mobile-toggle-button-icon}">' +
                 '<path d="M0 0h24v24H0z" fill="none"/>' +
                 '<path d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"/>' +
                 "</svg>"
@@ -54,7 +54,7 @@
     &.au-accordion--open {
         &:before {
             background-image: AU-svguri(
-                '<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill="#000000">' +
+                '<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill="#{$header-color-mobile-toggle-button-icon}">' +
                     '<path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/>' +
                     '<path d="M0 0h24v24H0z" fill="none"/>' + "</svg>"
             );
@@ -62,7 +62,7 @@
 
         &:hover:before {
             background-image: AU-svguri(
-                '<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill="#000000">' +
+                '<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill="#{$header-color-mobile-toggle-button-icon}">' +
                     '<path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/>' +
                     '<path d="M0 0h24v24H0z" fill="none"/>' + "</svg>"
             );
