--- a/magda-web-client/src/_variables.scss
+++ b/magda-web-client/src/_variables.scss
@@ -4,7 +4,7 @@ $AU-color-foreground-text: #272727;
 $AU-color-background: #ffffff;
 
 $AU-colordark-foreground-action: #f2f2f2;
-$AU-colordark-foreground-focus: #6b7fd7;
+$AU-colordark-foreground-focus: #144475;
 $AU-colordark-foreground-text: #f2f2f2;
 $AU-colordark-background: #272727;
 
@@ -18,18 +18,18 @@ $header-color-action-background: transparent;
 $header-color-focus: #f2f2f2;
 $header-color-focus-background: #272727;
 
-$header-color-mobile-toggle-button-text: #6b7fd7;
-$header-color-mobile-toggle-button-icon: #000000;
+$header-color-mobile-toggle-button-text: #f2f2f2;
+$header-color-mobile-toggle-button-icon: #f2f2f2;
 $header-color-mobile-nav-background: white;
 $header-color-mobile-nav-border-bottom: #dad9db;
 $header-color-mobile-nav-border-left: transparent;
-$header-color-mobile-nav-action: $AU-colordark-background;
+$header-color-mobile-nav-action: #272727;
 $header-color-mobile-nav-action-background: transparent;
 $header-color-mobile-nav-active: inherit;
 $header-color-mobile-nav-active-background: #f4f3f5;
 $header-color-mobile-nav-active-border: $AU-colordark-background;
-$header-color-mobile-nav-focus: #ffffff;
-$header-color-mobile-nav-focus-background: #341039;
+$header-color-mobile-nav-focus: #f4f3f5;
+$header-color-mobile-nav-focus-background: #272727;
 $header-color-mobile-nav-focus-border: transparent;
 $header-color-mobile-nav-content: inherit;
 $header-color-mobile-nav-content-background: transparent;
