Add jurisdiction info to org page

--- a/magda-web-client/src/Components/Publisher/PublisherDetails.scss
+++ b/magda-web-client/src/Components/Publisher/PublisherDetails.scss
@@ -1,4 +1,10 @@
 .publisher-details {
+    .publisher-details-title {
+        h1 {
+            margin-bottom: 0px !important;
+        }
+        margin-bottom: 16px;
+    }
     .publisher-details-overview {
         margin-bottom: 8px;
     }
