Fixes #1915 Fixed form error message not being heard in order by screen readers and also when field is in focus by putting them in the same label element

--- a/magda-web-client/src/Components/RequestDataset/FormTemplate.scss
+++ b/magda-web-client/src/Components/RequestDataset/FormTemplate.scss
@@ -52,11 +52,11 @@ $form-width: 700px;
     font-weight: 500;
 }
 
-.correspondence-field-error {
+.field-error {
     color: red;
     display: block;
     font-size: 14px;
-    margin-top: -20px;
+    margin-top: 10px;
     margin-bottom: 10px;
 }
 
