--- a/magda-web-client/src/Components/Search/SearchSuggestionBox.scss
+++ b/magda-web-client/src/Components/Search/SearchSuggestionBox.scss
@@ -52,6 +52,10 @@
                 height: 13px;
                 opacity: 0.5;
             }
+
+            &--selected.search-item-delete-button {
+                background: #f2f2f2 !important;
+            }
         }
         .search-item-container {
             position: relative;
