Fixed up padding in the recent search <ul>

--- a/magda-web-client/src/Components/Search/SearchSuggestionBox.scss
+++ b/magda-web-client/src/Components/Search/SearchSuggestionBox.scss
@@ -68,6 +68,11 @@
         .recent-item-icon {
             padding: 8px;
         }
+
+        .search-history-items {
+            list-style: none;
+            padding: 0;
+        }
     }
 
     .selected {
