frontend adjustment for creation.isOpenData Field

--- a/magda-web-client/src/Components/Dataset/DatasetSummary.scss
+++ b/magda-web-client/src/Components/Dataset/DatasetSummary.scss
@@ -71,7 +71,8 @@
 
     .dataset-summary-downloads,
     .dataset-summary-updated,
-    .dataset-summary-quality {
+    .dataset-summary-quality,
+    .dataset-summary-type {
         float: left;
         line-height: 1.5rem;
     }
