Fixed Divider display issue

--- a/magda-web-client/src/Components/Dataset/DatasetSummary.scss
+++ b/magda-web-client/src/Components/Dataset/DatasetSummary.scss
@@ -1,6 +1,9 @@
 @import "../../variables";
 
 .dataset-summary {
+    .divider {
+        float: left;
+    }
     height: auto;
     clear: both;
     .dataset-summary-title {
