--- a/magda-gateway/views/_head.ejs
+++ b/magda-gateway/views/_head.ejs
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+<link rel="shortcut icon" href="/api/v0/content/favicon.ico">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
