- Fixed regex for match cc license - Sort by license string length - join license text block by \n - Make \n displayed as newline

--- a/magda-web-client/src/Components/DistributionRow.scss
+++ b/magda-web-client/src/Components/DistributionRow.scss
@@ -26,6 +26,7 @@
 
     .distribution-row-link-license {
         @include AU-fontgrid(xs);
+        white-space: pre;
     }
 
     .download-button {
