--- a/magda-web-client/src/Components/Dataset/New/NewDataset.module.scss
+++ b/magda-web-client/src/Components/Dataset/New/NewDataset.module.scss
@@ -1,3 +1,17 @@
+.root {
+    margin-top: 24px;
+}
+
 .dropZone {
-    border: 1px solid #000;
+    max-width: 80%;
+    height: 7em;
+    margin: 2em auto 0 auto;
+    border: 1px dashed #000;
+}
+
+.dropTarget {
+    display: flex;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
 }
