Changed links to buttons

--- a/magda-web-client/src/Components/SearchResults/SearchPageSuggest.scss
+++ b/magda-web-client/src/Components/SearchResults/SearchPageSuggest.scss
@@ -2,6 +2,14 @@
     font-weight: 500;
     padding-bottom: 20px;
 }
+
+.suggest-dataset-button {
+    font-size: 1.25rem;
+    line-height: 1.2;
+    font-weight: 500;
+    padding: 0;
+}
+
 .suggest-dataset-icon {
     vertical-align: middle;
     &:hover {
