--- a/magda-web-client/src/index.scss
+++ b/magda-web-client/src/index.scss
@@ -15,20 +15,8 @@ body {
             background: $AU-color-foreground-action;
         }
     }
-    a,
-    .au-anchor {
+    a {
         color: $AU-color-foreground-action;
-    }
-    .au-anchor {
-        text-decoration: underline;
-        text-decoration-skip-ink: auto;
-
-        &:hover {
-            color: $AU-color-foreground-text;
-            text-decoration: none;
-        }
-
-        @include AU-focus();
     }
 
     button.au-btn,
@@ -265,4 +253,33 @@ h4 {
 /* Double class to get more specificity than the pancake css */
 .au-header.au-header {
     padding: 0.5rem 0 0.5rem 0;
+}
+
+.navigation .au-link-list > li button {
+    font-size: 1rem;
+    padding: 1rem 0.78rem;
+    line-height: 1.5;
+    display: block;
+    text-decoration: none;
+
+    &:hover {
+        background-color: #341039;
+        color: #fff;
+    }
+}
+
+.link-button {
+    cursor: pointer;
+    border: none;
+    background: transparent;
+    color: #4c2a85;
+    text-decoration: underline;
+    -webkit-text-decoration-skip: ink;
+    text-decoration-skip-ink: auto;
+
+    &:hover {
+        text-decoration: none;
+    }
+
+    @include AU-focus();
 }
