Provide access to CKAN Data API for enabled resources

--- a/magda-web-client/src/Components/DistributionRow.scss
+++ b/magda-web-client/src/Components/DistributionRow.scss
@@ -60,5 +60,9 @@
             text-align: right;
             margin-top: 5px;
         }
+        a {
+            display: inline-block;
+            margin-left: 5px;
+        }
     }
 }
