Adjusted button vertical alignment.

--- a/magda-web-client/src/Components/RecordHandler.scss
+++ b/magda-web-client/src/Components/RecordHandler.scss
@@ -115,6 +115,10 @@
     margin-bottom: 1em;
 }
 
+.au-btn .distribution-button-icon {
+    vertical-align: -2px;
+}
+
 .distribution-format {
     display: inline;
 }
