--- a/magda-web-client/src/Components/DistributionRow.scss
+++ b/magda-web-client/src/Components/DistributionRow.scss
@@ -36,7 +36,7 @@
             margin-left: 25px;
         }
         img {
-            vertical-align: inherit;
+            vertical-align: -2px;
         }
     }
     .new-tab-button {
