--- a/magda-web-client/src/Components/Dataset/DatasetAddFilesPage.module.scss
+++ b/magda-web-client/src/Components/Dataset/DatasetAddFilesPage.module.scss
@@ -3,10 +3,11 @@
 }
 
 .dropZone {
-    max-width: 80%;
+    width: 100%;
     height: 7em;
     margin: 2em auto 0 auto;
     border: 1px dashed #000;
+    cursor: pointer;
 }
 
 .dropTarget {
