--- a/magda-web-client/src/Components/Editing/Style.scss
+++ b/magda-web-client/src/Components/Editing/Style.scss
@@ -8,7 +8,7 @@
     font-size: 16px;
     font-size: 1rem;
     border: none;
-    background-color: $AU-colordark-foreground-action;
+    background-color: darken($AU-colordark-foreground-action, 15%);
     color: $AU-colordark-background;
 }
 
