--- a/magda-web-client/src/index.scss
+++ b/magda-web-client/src/index.scss
@@ -208,8 +208,10 @@ h4 {
     font-weight: 400;
 }
 
-.au-text-input {
+.au-text-input,
+.au-text-input--block {
     border: 3px solid $AU-color-foreground-action;
+    max-width: 480px !important;
 }
 
 .au-body ::selection {
