Added draft indicator to edit page

--- a/magda-web-client/src/Components/Dataset/DatasetPage.scss
+++ b/magda-web-client/src/Components/Dataset/DatasetPage.scss
@@ -1,5 +1,13 @@
 @import "variables";
 
+.record--dataset {
+    .au-page-alerts {
+        p {
+            max-width: none;
+        }
+    }
+}
+
 .dataset-details {
     h3.section-heading {
         @include AU-fontgrid(lg, heading);
