- fixed react duplicate key of children warning - fixed react <div> can't be inside <p> warning

--- a/magda-web-client/src/Components/Editing/Style.scss
+++ b/magda-web-client/src/Components/Editing/Style.scss
@@ -1,5 +1,10 @@
 @import "variables";
 
+.textEditorEx {
+    margin-right: 5px;
+    margin-bottom: 5px;
+}
+
 .toggle-editor-container {
     position: relative;
     .toggle-edit-button {
