Some last ui touch ups.

--- a/magda-web-client/src/Components/Common/HelpSnippet.scss
+++ b/magda-web-client/src/Components/Common/HelpSnippet.scss
@@ -1,8 +1,8 @@
 .helpSnippet-button {
     width: 2em;
     cursor: pointer;
-    margin-top: -3em;
-    float: right;
+    vertical-align: middle;
+    margin-left: 0.5em;
 }
 
 .helpSnippet-body {
