--- a/magda-web-client/src/Components/Dataset/Add/DatasetAddMetadataPage.scss
+++ b/magda-web-client/src/Components/Dataset/Add/DatasetAddMetadataPage.scss
@@ -32,3 +32,8 @@
     display: inline-block;
     padding: 1em;
 }
+
+.snippet-heading {
+    display: inline-block;
+    vertical-align: middle;
+}
