Fixed height of the progress bar.

--- a/magda-web-client/src/Components/Common/ProgressBar.scss
+++ b/magda-web-client/src/Components/Common/ProgressBar.scss
@@ -23,7 +23,7 @@
     animation: gradient 3s linear infinite;
     background-position: 0% 0%;
     background-size: 500% auto;
-    height: 2em;
+    height: 10px;
 }
 
 @keyframes gradient {
