Added some more tuning

--- a/magda-web-client/src/index.scss
+++ b/magda-web-client/src/index.scss
@@ -323,4 +323,20 @@ h4 {
     .print-only {
         display: initial;
     }
+
+    .col-sm-1,
+    .col-sm-2,
+    .col-sm-3,
+    .col-sm-4,
+    .col-sm-5,
+    .col-sm-6,
+    .col-sm-7,
+    .col-sm-8,
+    .col-sm-11 {
+        width: auto !important;
+    }
+
+    .block {
+        display: block;
+    }
 }
