Remove opacity (hopefully will fix firefox)

--- a/magda-web-client/src/index.scss
+++ b/magda-web-client/src/index.scss
@@ -312,6 +312,14 @@ h4 {
         max-width: 100% !important;
     }
 
+    .au-body,
+    .au-body *,
+    p,
+    .markdown {
+        color: black !important;
+        opacity: 1 !important;
+    }
+
     .container {
         width: 100% !important;
     }
