--- a/magda-web-client/src/index.scss
+++ b/magda-web-client/src/index.scss
@@ -298,6 +298,10 @@ h4 {
         display: none;
     }
 
+    .wrapper {
+        display: block !important;
+    }
+
     a[href]:after {
         display: none;
         visibility: hidden;
