new dataset page design

--- a/magda-web-client/src/_variables.scss
+++ b/magda-web-client/src/_variables.scss
@@ -41,6 +41,8 @@ $footer-color-text: $AU-colordark-foreground-text;
 $footer-color-action: $AU-colordark-foreground-action;
 $footer-color-focus: $AU-colordark-foreground-focus;
 
+$add-dataset-page-button-top-rows: #30384d;
+
 $magda-green: #16a085;
 $magda-red: #c0392b;
 $magda-yellow: #f1c40f;
