- update icon - Choice set css scope

--- a/magda-web-client/src/Components/Common/Choice.scss
+++ b/magda-web-client/src/Components/Common/Choice.scss
@@ -10,7 +10,7 @@
     color: #ffffff;
 }
 
-.au-btn--secondary {
+.au-btn--secondary.choice-Button {
     color: #484848 !important;
     .choice-buttonHeading {
         color: #484848 !important;
@@ -41,7 +41,7 @@
     box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
-.au-btn--secondary {
+.au-btn--secondary.choice-Button {
     border: none !important;
     box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.2);
 }
