Make body full screen

--- a/magda-web-client/src/AppContainer.scss
+++ b/magda-web-client/src/AppContainer.scss
@@ -10,3 +10,9 @@
     justify-content: space-between;
     min-height: 100vh;
 }
+
+.app-container {
+    width: 100% !important;
+    padding-left: 0px !important;
+    padding-right: 0px !important;
+}
