Add padding to add dataset pages as well

--- a/magda-web-client/src/AppContainer.scss
+++ b/magda-web-client/src/AppContainer.scss
@@ -22,6 +22,7 @@
         .static-page-container,
         .correspondence-form,
         .data-preview-vis,
+        .dataset-add-files-root,
         .record--distribution {
             padding-left: 12px;
             padding-right: 12px;
