--- a/magda-web-client/src/Components/Dataset/Add/DatasetAddFilesPage.scss
+++ b/magda-web-client/src/Components/Dataset/Add/DatasetAddFilesPage.scss
@@ -1,18 +1,60 @@
-.dataset-add-files-dropZone {
-    width: 100%;
-    height: 7em;
-    margin: 2em auto 0 auto;
-    border: 1px dashed #000;
-    cursor: pointer;
-}
+.dataset-add-file-page {
+    .top-text-area {
+        padding-bottom: 88px;
+        h1 {
+            font-size: 38px;
+            font-weight: normal;
+            font-style: normal;
+            font-stretch: normal;
+            line-height: 0.79;
+            letter-spacing: normal;
+            color: #30384d;
+            margin-bottom: 76px;
+        }
+        p {
+            max-width: none;
+            font-size: 21px;
+            font-weight: normal;
+            font-style: normal;
+            font-stretch: normal;
+            line-height: 1.62;
+            letter-spacing: normal;
+            color: #484848;
+        }
+    }
+    .files-area {
+        margin-bottom: 32px;
+    }
+    .dataset-file-root {
+        margin-bottom: 65px;
+    }
+    .more-files-to-add-text {
+        margin-top: 54px;
+        font-size: 24px;
+        font-weight: 500;
+        font-style: normal;
+        font-stretch: normal;
+        line-height: 0.88;
+        letter-spacing: normal;
+        color: #484848;
+    }
+    .dataset-add-files-dropZone {
+        width: 100%;
+        height: 179px;
+        margin: 0 auto 0 auto;
+        cursor: pointer;
+        background-image: url("../../../assets/upload-section.svg");
+        background-repeat: no-repeat;
+    }
 
-.dataset-add-files-dropTarget {
-    display: flex;
-    height: 100%;
-    align-items: center;
-    justify-content: center;
-}
+    .dataset-add-files-dropTarget {
+        display: flex;
+        height: 100%;
+        align-items: center;
+        justify-content: center;
+    }
 
-.dataset-add-files-fileListItem {
-    list-style: none;
+    .dataset-add-files-fileListItem {
+        list-style: none;
+    }
 }
