--- a/magda-web-client/src/Components/Dataset/Add/DatasetFile.scss
+++ b/magda-web-client/src/Components/Dataset/Add/DatasetFile.scss
@@ -3,6 +3,7 @@
     padding: 1em;
     max-width: 48em;
     border-radius: 5px;
+    position: relative;
 
     display: flex;
     justify-content: space-between;
@@ -11,12 +12,19 @@
         margin: 0 0 0.5em 0;
     }
 
-    .dataset-file-editButton {
-        font-size: 20px;
-        padding: 0px 7px;
-    }
-
     .file-in-progress {
+        .dataset-file-delete-button {
+            position: absolute;
+            width: 26px;
+            height: 26px;
+            border: none;
+            right: 100px;
+            top: 0px;
+            padding: 1px 0px 0px 0px;
+        }
+        .dataset-file-delete-button:focus {
+            outline: none;
+        }
         .file-icon-area {
             float: left;
             margin-right: 57px;
@@ -49,22 +57,76 @@
                 color: #636363;
             }
             .file-progress-bar {
+                position: relative;
                 height: 24px;
                 border-radius: 8px;
-                background-image: linear-gradient(
-                        to left,
-                        rgba(255, 255, 255, 0.5),
-                        rgba(0, 0, 0, 0.5)
-                    ),
-                    linear-gradient(
-                        to bottom,
-                        rgba(65, 49, 87, 0.68),
-                        rgba(65, 49, 87, 0.68)
-                    );
+                margin-top: 16px;
+                margin-bottom: 9px;
+                width: 330px;
+                border: 1px solid #c0bebe;
+                .file-progress-bar-content {
+                    position: absolute;
+                    border-radius: 8px;
+                    height: 24px;
+                    left: -1px;
+                    top: -1px;
+                    background-image: linear-gradient(
+                            to left,
+                            rgba(255, 255, 255, 0.5),
+                            rgba(0, 0, 0, 0.5)
+                        ),
+                        linear-gradient(
+                            to bottom,
+                            rgba(65, 49, 87, 0.68),
+                            rgba(65, 49, 87, 0.68)
+                        );
+                }
             }
         }
     }
 }
-.complete-processing {
-    border: 1px solid #ccc;
+.complete-processing.dataset-file-root {
+    background-image: url("../../../assets/purple-box.svg");
+    background-repeat: no-repeat;
+    padding-left: 60px;
+
+    .file-info {
+        font-size: 13px;
+        font-weight: normal;
+        font-style: normal;
+        font-stretch: normal;
+        line-height: 1.54;
+        letter-spacing: normal;
+        color: #484848;
+        font-weight: 300;
+    }
+    .dataset-file-edit-button {
+        position: absolute;
+        width: 26px;
+        height: 26px;
+        border: none;
+        right: 65px;
+        top: 10px;
+        padding: 1px 0px 0px 0px;
+    }
+
+    .dataset-file-delete-button {
+        position: absolute;
+        width: 26px;
+        height: 26px;
+        border: none;
+        right: 30px;
+        top: 10px;
+        padding: 1px 0px 0px 0px;
+    }
+
+    .dataset-file-edit-button:focus,
+    .dataset-file-delete-button:focus {
+        outline: none;
+    }
+    .dataset-file-edit-button:hover,
+    .dataset-file-delete-button:hover {
+        border: 1px solid #c0bebe;
+        border-radius: 4px;
+    }
 }
